--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
 <body>
     <h1>Calculator Application</h1>
  
+    <form action="" id="add">
+        <div class="form-group">
+            <label for="add1">1st number:</label>
+            <input type="text" id="add1" class="form-control">
+        </div>
+        <div class="form-group">
+            <label for="add2">2nd number:</label>
+            <input type="text" id="add2" class="form-control">
+        </div>
+        <button type="submit" class="btn">Add!</button>
+    </form>
     
     <script src="./js/script.js"></script>
 </body>
