add a div element to display output instead of displaying it using an alert dialog box

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <button type="submit" class="btn">Add!</button>
     </form>
+    <div id="output"></div>
     
     <script src="./js/script.js"></script>
 </body>
